scrollbar css fix

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 * {
-    scrollbar-width: thin;
+    scrollbar-width: none;
 }
 
 *::-webkit-scrollbar {
